// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Text Set to disabled 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 fgSEox"
    >
      <p
        class="Text-sc-1wu7vpu-0 boKLRH"
        color="currentColor"
        disabled=""
        font-size="16px"
      >
        Disabled text
      </p>
    </div>
    <div
      class="Box-sc-1qu1edy-0 cloHC"
    >
      <p
        class="Text-sc-1wu7vpu-0 fQjNwk"
        color="white"
        disabled=""
        font-size="16px"
      >
        Disabled text
      </p>
    </div>
    <div
      class="Box-sc-1qu1edy-0 hpTOkf"
    >
      <p
        class="Text-sc-1wu7vpu-0 fQjNwk"
        color="white"
        disabled=""
        font-size="16px"
      >
        Disabled text
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Text Set to inline 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <span
      class="Text-sc-1wu7vpu-0 jKfpqd"
      color="currentColor"
      font-size="16px"
    >
      Inline text
    </span>
    <span
      class="Text-sc-1wu7vpu-0 jRzHjr"
      color="currentColor"
      font-size="16px"
    >
      Inline text
    </span>
  </div>
</div>
`;

exports[`Storyshots Text Text 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <p
      class="Text-sc-1wu7vpu-0 jRzHjr"
      color="currentColor"
      font-size="16px"
    >
      Default text
    </p>
  </div>
</div>
`;

exports[`Storyshots Text With a color 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <p
      class="Text-sc-1wu7vpu-0 fCRZiO"
      color="blue"
      font-size="16px"
    >
      Blue text
    </p>
  </div>
</div>
`;

exports[`Storyshots Text With a custom margin 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <p
      class="Text-sc-1wu7vpu-0 felZjp"
      color="currentColor"
      font-size="16px"
    >
      Text 24px bottom margin.
    </p>
    <p
      class="Text-sc-1wu7vpu-0 jRzHjr"
      color="currentColor"
      font-size="16px"
    >
      Text with default (0px) bottom margin.
    </p>
  </div>
</div>
`;

exports[`Storyshots Text With a size 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 eDSxfb"
    >
      <p
        class="Text-sc-1wu7vpu-0 jRzHjr"
        color="currentColor"
        font-size="16px"
      >
        Default (16px/24px)
      </p>
    </div>
    <div
      class="Box-sc-1qu1edy-0 eDSxfb"
    >
      <p
        class="Text-sc-1wu7vpu-0 iBrxiX"
        color="currentColor"
        font-size="small"
      >
        Small (14px/24px)
      </p>
      <p
        class="Text-sc-1wu7vpu-0 byAaRI"
        color="currentColor"
        font-size="small"
      >
        Small Compressed (14px/16px)
      </p>
    </div>
    <div
      class="Box-sc-1qu1edy-0 eDSxfb"
    >
      <p
        class="Text-sc-1wu7vpu-0 gcSKzG"
        color="currentColor"
        font-size="smaller"
      >
        Smaller (12px/16px)
      </p>
    </div>
  </div>
</div>
`;
